# csgo-personality

./: app.py  data.csv  pyproject.toml  wsgi.py
personality/: main.py
personality/static/: style.css
personality/templates/: index.html  master.html
templates/: result.html
